# effectful-sqlite

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  effectful-sqlite.cabal
app/: Main.hs
src/Effectful/: SQLite.hs  Sqlite.hs
src/Effectful/SQLite/: Connection.hs
src/Effectful/SQLite/Connection/: Pool.hs
src/Effectful/Sqlite/: Effect.hs  Internal.hs  Retry.hs  Types.hs
src/Effectful/Sqlite/Migration/: Runner.hs  Types.hs
